# ElfScript

./: CMakeLists.txt  README.md  TorqueScript.cmake  main.cpp  torqueConfig.h
BaseElf/: CMakeLists.txt  README.md  build_web.sh
BaseElf/assets/: basic.elf  main.elf  minimal.elf  script_stub.elf  testBed.elf
BaseElf/assets/include/: AtlasFont.elf  Inspector.elf  TextureAtlas.elf
BaseElf/assets/includes/: AtlasFont.elf  ScriptXML.elf  TextureAtlas.elf  collision_helper.elf
BaseElf/assets/modules/: Aquarium.elf  BaseDemo.elf  Collision.elf  ImGuiDemo.elf  blank.elf
BaseElf/assets/obsolete/: main1th.elf  pong.elf
BaseElf/include/: torqueConfig.h
BaseElf/src/: ColorConstants.h  ConsoleTypes.cpp  ConsoleTypes.h  bindings_sdl.cpp  main.cpp  myPlatformProcess.cc
ElfScript/: ElfScript.cmake  OldElfScript.cmake  OlddemoMain.cpp  README.md  demoMain.cpp  test.cs  test2.cs  torqueConfig.h
ElfScript/addons/ImGui/: bindings_imgui.cpp  bindings_imgui.h
ElfScript/addons/SDL3/: SDL3_input.cpp  SDL3_input.h
ElfScript/addons/console/: consoleDocExporter.cpp
ElfScript/addons/shellConsole/: POSIXConsole.cpp
ElfScript/console/: console.cpp  console.h  consoleDoc.cpp  consoleExtras.cpp  consoleExtras.h  consoleFunctions.cpp  consoleInternal.cpp  consoleInternal.h  consoleObject.cpp  consoleTypes.cpp  consoleTypes.h  engineAPI.h  enginePrimitives.cpp  engineStructs.h  fileSystemFunctions.cpp  script.h  scriptFilename.cpp  scriptObjects.cpp  scriptObjects.h  scriptPreprocessor.cpp  scriptPreprocessor.h  sim.cpp  sim.h  simManager.cpp  simObject.cpp  simObject.h  simSet.cpp  telnetConsole.cpp  typeValidators.cpp
ElfScript/console/torquescript/: CMDgram.y  CMDscan.cpp  CMDscan.l  ast.h  astAlloc.cpp  astNodes.cpp  cmdgram.cpp  codeBlock.cpp  codeBlock.h  compiledEval.cpp  compiler.cpp  compiler.h  evalState.cpp  evalState.h  optimizer.cpp
ElfScript/console/unused/: debugOutputConsumer.h
ElfScript/core/: dataChunker.h  stringTable.cpp  stringTable.h
ElfScript/core/stream/: bitStream.cpp  bitStream.h
ElfScript/core/strings/: String.h  stringFunctions.cpp  stringFunctions.h  unicode.cpp
ElfScript/core/util/: refBase.h  str.h  tDictionary.h  tVector.h  timeClass.cpp  timeClass.h
ElfScript/core/util/journal/: journaledSignal.h
ElfScript/demo/: demoMain.cpp  test.cs  test.elf  test2.elf  testObj.cpp  torqueConfig.h
ElfScript/main/: engineGlue.cpp
ElfScript/math/: mConstants.h
ElfScript/platform/: platform.h  platformAssert.cpp  platformFileIO.cpp  platformIntrinsics.h  platformMemory.cpp  types.gcc.h
ElfScript/platform/stub/: platformAssert.cpp  platformProcess.cpp
Engine/console/: consoleTypes.cpp  sim.h  simDictionary.h  simObject.h  simSet.cpp  telnetDebugger.cpp
Engine/platform/: XXTHMemory.cpp
TorqueScript/: TorqueScript.cmake
TorqueScript/console/: console.cpp  console.h  consoleDoc.cpp  consoleExtras.h  consoleFunctions.cpp  consoleInternal.cpp  consoleObject.cpp  consoleTypes.h  engineAPI.h  script.h  sim.cpp  sim.h  simDatablock.cpp  simManager.cpp  simObject.cpp  simObject.h  simSet.cpp
TorqueScript/console/torquescript/: codeBlock.cpp  compiledEval.cpp
TorqueScript/core/util/: str.cpp
TorqueScript/core/util/zip/: zipArchive.cpp
TorqueScript/demo/: main.cpp  torqueConfig.h
TorqueScript/main/: engineAPI.cpp  engineGlue.cpp  engineGlue.h
TorqueScript/math/: mMathFn.h
TorqueScript/platform/: platformFileIO.cpp  platformIntrinsics.gcc.h  platformMemory.cpp  platformVolume.cpp  types.gcc.h
TorqueScript/platform/posix/: POSIXStdConsole.h  posixVolume.cpp
TorqueScript/platform/stub/: platformProcess.cpp
TorqueScript/platform/win/: winVolume.cpp
TorqueScript/sim/: netConnection.h  netObject.h
console/: console.cpp  consoleFunctions.cpp  consoleObject.h  consoleTypes.cpp  consoleTypes.h  engineAPI.h  persistenceManager.cpp  sim.cpp  simManager.cpp  simObject.cpp  simObject.h  simSet.cpp  typeValidators.cpp
console/unused/: consoleXMLExport.h  fieldBrushObject.h
core/: XXTHMath.h
core/util/: str.cpp  tVector.cpp
docu/: Compiler_OP_Codes.md  OP_CALLFUNC.md  Readme.md  codebock_exec.md  localvarregister.md  typeid.md
experimental/: Experimental.cmake
experimental/include/: ElfGlue.h  Tools.h
experimental/platform/: platform.h
experimental/script/: CMDgram.y  CMDscan.cpp  CMDscan.l  cmdgram.cpp  evalState.h
experimental/torquescript/: CMDscan.cpp  CMDscan.l  ast.h  astAlloc.cpp  astNodes.cpp  codeBlock.cpp  codeBlock.h  compiledEval.cpp  compiler.cpp  compiler.h  evalState.h  optimizer.cpp  parser.h
math/: mQuat.cpp  mathUtils.cpp
math/isa/avx/: avx_intrinsics.h  float3.cpp  float4.cpp  mat44.cpp
math/isa/avx2/: avx2_intrinsics.h  float3.cpp  float4.cpp  mat44.cpp
math/isa/sse2/: float3.cpp  float4.cpp  mat44.cpp  sse2_intrinsics.h
math/isa/sse41/: float3.cpp  float4.cpp  mat44.cpp  sse41_intrinsics.h
math/util/: frustum.cpp
platform/: XXTHMemory.cpp  XXTHPlatformProcess.cpp
platform/threads/: threadPool.cpp
util/: fpsTracker.cpp  fpsTracker.h  settings.cpp
